--- a/00. Project 1/Project 1 Brainstorming.ipynb
+++ b/00. Project 1/Project 1 Brainstorming.ipynb
@@ -11,15 +11,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scraping Ideas"
+    "## Questions"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 1) What is the research question(s) that will guide your project?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2) What data are you hoping to scrape? If you are wanting to use other datasets in conjunction with the data you will scrape then say that too."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3) What website will you scrape from?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ideas"
+   ]
   }
  ],
  "metadata": {
