--- a/00. Project 1/Project-Script-and-Outputs/python_automated_analysis.ipynb
+++ b/00. Project 1/Project-Script-and-Outputs/python_automated_analysis.ipynb
@@ -25,7 +25,7 @@
     "### **Project Steps**\n",
     "#### **1.** Scrape S&P 500 companies from Wikipedia and create a CSV file with the scraped company information\n",
     "#### **2.** Create a dataframe from the CSV and randomly select 1 security (ticker symbol)\n",
-    "#### **3.** Scrape the Yahoo Finance site for financial statements, key statistics, and stock price history for the selected security \n",
+    "#### **3.** Scrape the Yahoo Finance site for key statistics, financial statements and stock price history for the selected security \n",
     "#### **4.** Create a multi-layered stock screen to determine company's financial strength\n",
     "#### **5.** Scrape Yahoo News Articles for langauge associated with \"positive\" sentiment for the security\n",
     "#### **6.** Can financial strength and positive sentiment predict stock price?"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,16 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['FTV']"
+       "['IFF']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,6 +138,11 @@
     "\n",
     "#Randomly select 1 company from company_list\n",
     "random_company = random.sample(company_list,1)\n",
+    "\n",
+    "\n",
+    "#Establishes the randomly selected stock variable as a string\n",
+    "stock = ''.join(random_company)\n",
+    "\n",
     "random_company"
    ]
   },
@@ -157,12 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Establishes URLs for Key Statistics, Company Profile, and Financial Statements\n",
-    "url_key_stats = 'https://finance.yahoo.com/quote/{}/key-statistics?p={}'\n",
     "url_financial_statements = 'https://finance.yahoo.com/quote/{}/financials?p={}'\n",
     "\n",
     "\n",
@@ -251,62 +255,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **3. Scrape Yahoo Finance for Key Statistics** "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['annualHoldingsTurnover', 'enterpriseToRevenue', 'beta3Year', 'profitMargins', 'enterpriseToEbitda', '52WeekChange', 'morningStarRiskRating', 'forwardEps', 'revenueQuarterlyGrowth', 'sharesOutstanding', 'fundInceptionDate', 'annualReportExpenseRatio', 'totalAssets', 'bookValue', 'sharesShort', 'sharesPercentSharesOut', 'fundFamily', 'lastFiscalYearEnd', 'heldPercentInstitutions', 'netIncomeToCommon', 'trailingEps', 'lastDividendValue', 'SandP52WeekChange', 'priceToBook', 'heldPercentInsiders', 'nextFiscalYearEnd', 'yield', 'mostRecentQuarter', 'shortRatio', 'sharesShortPreviousMonthDate', 'floatShares', 'beta', 'enterpriseValue', 'priceHint', 'threeYearAverageReturn', 'lastSplitDate', 'lastSplitFactor', 'legalType', 'lastDividendDate', 'morningStarOverallRating', 'earningsQuarterlyGrowth', 'priceToSalesTrailing12Months', 'dateShortInterest', 'pegRatio', 'ytdReturn', 'forwardPE', 'maxAge', 'lastCapGain', 'shortPercentOfFloat', 'sharesShortPriorMonth', 'impliedSharesOutstanding', 'category', 'fiveYearAverageReturn'])"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Acquires company key statistics from page content\n",
-    "response_3 = requests.get(url_key_stats.format(stock, stock))\n",
-    "stat_content = BeautifulSoup(response_3.text, 'html.parser')\n",
-    "\n",
-    "\n",
-    "#Creates a pattern using a regular expression to pinpoint where the stats are stored\n",
-    "pattern = re.compile(r'\\s--\\sData\\s--\\s')\n",
-    "script_data = stat_content.find('script', text = pattern).contents[0]\n",
-    "\n",
-    "\n",
-    "#Finds the boundaries of the slice where the financials are stored\n",
-    "start = script_data.find(\"context\")-2\n",
-    "json_data = json.loads(script_data[start:-12])\n",
-    "\n",
-    "#Dictionary keys of stats to help create variables\n",
-    "stat_list = json_data['context']['dispatcher']['stores']['QuoteSummaryStore']['defaultKeyStatistics'].keys()\n",
-    "stat_list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### **3. Scrape Yahoo Finance for Stock Price History** "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,11 +277,11 @@
     "\n",
     "\n",
     "#Acquire the data from the page given the above params\n",
-    "response_4 = requests.get(stock_url.format(stock), params=params)\n",
+    "response_3 = requests.get(stock_url.format(stock), params=params)\n",
     "\n",
     "\n",
     "#Puts the stock price data into a list\n",
-    "price_file = StringIO(response_4.text)\n",
+    "price_file = StringIO(response_3.text)\n",
     "reader = csv.reader(price_file)\n",
     "data = list(reader)\n",
     "\n",
@@ -335,7 +289,39 @@
     "#Creates a stock price data frame and write to CSV\n",
     "price_df = pd.DataFrame(data)\n",
     "\n",
-    "price_df.to_csv('Stock Price - 5 Year Historical.csv')"
+    "price_df.to_csv(f'{stock} Stock Price - 5 Year Historical.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **3. Scrape Yahoo Finance for Stock Statistics** "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Established url for Key Statistics\n",
+    "stats = pd.read_html(f'https://finance.yahoo.com/quote/{stock}/key-statistics?p={stock}')\n",
+    "\n",
+    "\n",
+    "#Create dataframe with statistics\n",
+    "key_stats = stats[0]\n",
+    "stats_df = pd.DataFrame(key_stats)\n",
+    "\n",
+    "#Write the dataframe to csv\n",
+    "stats_df.to_csv(f'{stock} Statistics.csv')"
    ]
   }
  ],
